welcome.lessons.welcome.summative.Moria.scala.code
def Moria() = {
  setDirection(Direction.EST); avance();
  while (!estFaceMur) {
    avance();
    if (estSurBiscuit) {
      prendBiscuit();
      gauche(); gauche();
      while (!estSurBiscuit()) {
        avance()
      }
      recule();
      setDirection(Direction.OUEST);
      poseBiscuit();
    }
  }
}